// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<calendar> demo: > render [basic] correctly 1`] = `
<div class="arco-calendar arco-calendar-mode-month">
  <div class="arco-calendar-header">
    <div class="arco-calendar-header-left">
      <div class="arco-calendar-header-icon" role="button" tabindex="0"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="currentColor" class="arco-icon arco-icon-left" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M32 8.4 16.444 23.956 32 39.513"></path>
        </svg></div>
      <div class="arco-calendar-header-value">2023 年 01 月</div>
      <div role="button" tabindex="0" class="arco-calendar-header-icon"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="currentColor" class="arco-icon arco-icon-right" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="m16 39.513 15.556-15.557L16 8.4"></path>
        </svg></div><button class="arco-btn arco-btn-secondary arco-btn-shape-square arco-btn-size-small arco-btn-status-normal" type="button">
        <!--v-if-->今天
      </button>
    </div>
    <div class="arco-calendar-header-right"><span class="arco-radio-group-button arco-radio-group-size-small arco-radio-group-direction-horizontal"><label class="arco-radio-button arco-radio-checked"><input type="radio" checked="" class="arco-radio-target" value="month"><span class="arco-radio-button-content">月</span></label><label class="arco-radio-button"><input type="radio" class="arco-radio-target" value="year"><span class="arco-radio-button-content">年</span></label></span></div>
  </div>
  <div class="arco-calendar-body">
    <div class="arco-calendar-month">
      <div class="arco-calendar-week-list">
        <div class="arco-calendar-week-list-item">周日</div>
        <div class="arco-calendar-week-list-item">周一</div>
        <div class="arco-calendar-week-list-item">周二</div>
        <div class="arco-calendar-week-list-item">周三</div>
        <div class="arco-calendar-week-list-item">周四</div>
        <div class="arco-calendar-week-list-item">周五</div>
        <div class="arco-calendar-week-list-item">周六</div>
      </div>
      <div class="arco-calendar-month-cell-body">
        <div class="arco-calendar-month-row">
          <div class="arco-calendar-cell arco-calendar-cell-in-view arco-calendar-cell-selected">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">1</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell arco-calendar-cell-in-view">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">2</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell arco-calendar-cell-in-view">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">3</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell arco-calendar-cell-in-view">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">4</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell arco-calendar-cell-in-view">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">5</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell arco-calendar-cell-in-view">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">6</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell arco-calendar-cell-in-view">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">7</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div class="arco-calendar-month-row">
          <div class="arco-calendar-cell arco-calendar-cell-in-view">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">8</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell arco-calendar-cell-in-view">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">9</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell arco-calendar-cell-in-view">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">10</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell arco-calendar-cell-in-view">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">11</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell arco-calendar-cell-in-view">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">12</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell arco-calendar-cell-in-view">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">13</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell arco-calendar-cell-in-view">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">14</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div class="arco-calendar-month-row">
          <div class="arco-calendar-cell arco-calendar-cell-in-view">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">15</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell arco-calendar-cell-in-view">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">16</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell arco-calendar-cell-in-view">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">17</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell arco-calendar-cell-in-view">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">18</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell arco-calendar-cell-in-view">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">19</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell arco-calendar-cell-in-view">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">20</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell arco-calendar-cell-in-view">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">21</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div class="arco-calendar-month-row">
          <div class="arco-calendar-cell arco-calendar-cell-in-view">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">22</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell arco-calendar-cell-in-view">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">23</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell arco-calendar-cell-in-view">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">24</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell arco-calendar-cell-in-view">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">25</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell arco-calendar-cell-in-view">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">26</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell arco-calendar-cell-in-view">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">27</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell arco-calendar-cell-in-view">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">28</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div class="arco-calendar-month-row">
          <div class="arco-calendar-cell arco-calendar-cell-in-view">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">29</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell arco-calendar-cell-in-view">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">30</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell arco-calendar-cell-in-view">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">31</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">1</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">2</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">3</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">4</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div class="arco-calendar-month-row">
          <div class="arco-calendar-cell">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">5</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">6</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">7</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">8</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">9</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">10</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
          <div class="arco-calendar-cell">
            <div class="arco-calendar-date">
              <div class="arco-calendar-date-value">
                <div class="arco-calendar-date-circle">11</div>
              </div>
              <div class="arco-calendar-date-content">
                <!---->
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <!---->
  <!---->
</div>
 select: 2023-01-01T00:00:00.000Z
`;

exports[`<calendar> demo: > render [date-content] correctly 1`] = `
<div style="width: 100%; overflow: auto;">
  <div class="arco-calendar arco-calendar-mode-month">
    <div class="arco-calendar-header">
      <div class="arco-calendar-header-left">
        <div class="arco-calendar-header-icon" role="button" tabindex="0"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="currentColor" class="arco-icon arco-icon-left" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path d="M32 8.4 16.444 23.956 32 39.513"></path>
          </svg></div>
        <div class="arco-calendar-header-value">2020 年 03 月</div>
        <div role="button" tabindex="0" class="arco-calendar-header-icon"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="currentColor" class="arco-icon arco-icon-right" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path d="m16 39.513 15.556-15.557L16 8.4"></path>
          </svg></div><button class="arco-btn arco-btn-secondary arco-btn-shape-square arco-btn-size-small arco-btn-status-normal" type="button">
          <!--v-if-->今天
        </button>
      </div>
      <div class="arco-calendar-header-right"><span class="arco-radio-group-button arco-radio-group-size-small arco-radio-group-direction-horizontal"><label class="arco-radio-button arco-radio-checked"><input type="radio" checked="" class="arco-radio-target" value="month"><span class="arco-radio-button-content">月</span></label><label class="arco-radio-button"><input type="radio" class="arco-radio-target" value="year"><span class="arco-radio-button-content">年</span></label></span></div>
    </div>
    <div class="arco-calendar-body">
      <div class="arco-calendar-month">
        <div class="arco-calendar-week-list">
          <div class="arco-calendar-week-list-item">周日</div>
          <div class="arco-calendar-week-list-item">周一</div>
          <div class="arco-calendar-week-list-item">周二</div>
          <div class="arco-calendar-week-list-item">周三</div>
          <div class="arco-calendar-week-list-item">周四</div>
          <div class="arco-calendar-week-list-item">周五</div>
          <div class="arco-calendar-week-list-item">周六</div>
        </div>
        <div class="arco-calendar-month-cell-body">
          <div class="arco-calendar-month-row">
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">1</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">2</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">3</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view arco-calendar-cell-selected">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">4</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">5</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">6</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">7</div>
                </div>
                <div class="arco-calendar-date-content">
                  <div style="padding: 0px 10px;"><span class="arco-badge arco-badge-status arco-badge-no-children" style="width: 100%; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"><!----><span class="arco-badge-status-wrapper"><span class="arco-badge-status-dot arco-badge-status-processing"></span><span class="arco-badge-status-text">Cooking</span></span></span><br><span class="arco-badge arco-badge-status arco-badge-no-children" style="width: 100%; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"><!----><span class="arco-badge-status-wrapper"><span class="arco-badge-status-dot arco-badge-status-success"></span><span class="arco-badge-status-text">Reading</span></span></span><br><span class="arco-badge arco-badge-status arco-badge-no-children" style="width: 100%; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"><!----><span class="arco-badge-status-wrapper"><span class="arco-badge-status-dot arco-badge-status-warning"></span><span class="arco-badge-status-text">Sleeping</span></span></span><br></div>
                </div>
              </div>
            </div>
          </div>
          <div class="arco-calendar-month-row">
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">8</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">9</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">10</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">11</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">12</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">13</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">14</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
          </div>
          <div class="arco-calendar-month-row">
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">15</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">16</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">17</div>
                </div>
                <div class="arco-calendar-date-content">
                  <div style="padding: 0px 10px;"><span class="arco-badge arco-badge-status arco-badge-no-children" style="width: 100%; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"><!----><span class="arco-badge-status-wrapper"><span class="arco-badge-status-dot arco-badge-status-processing"></span><span class="arco-badge-status-text">Coding</span></span></span><br><span class="arco-badge arco-badge-status arco-badge-no-children" style="width: 100%; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"><!----><span class="arco-badge-status-wrapper"><span class="arco-badge-status-dot arco-badge-status-processing"></span><span class="arco-badge-status-text">Running</span></span></span><br><span class="arco-badge arco-badge-status arco-badge-no-children" style="width: 100%; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"><!----><span class="arco-badge-status-wrapper"><span class="arco-badge-status-dot arco-badge-status-success"></span><span class="arco-badge-status-text">Eating</span></span></span><br><span class="arco-badge arco-badge-status arco-badge-no-children" style="width: 100%; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"><!----><span class="arco-badge-status-wrapper"><span class="arco-badge-status-dot arco-badge-status-warning"></span><span class="arco-badge-status-text">Play games</span></span></span><br><span class="arco-badge arco-badge-status arco-badge-no-children" style="width: 100%; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"><!----><span class="arco-badge-status-wrapper"><span class="arco-badge-status-dot arco-badge-status-danger"></span><span class="arco-badge-status-text">Sleeping</span></span></span><br></div>
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">18</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">19</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">20</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">21</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
          </div>
          <div class="arco-calendar-month-row">
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">22</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">23</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">24</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">25</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">26</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">27</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">28</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
          </div>
          <div class="arco-calendar-month-row">
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">29</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">30</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">31</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">1</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">2</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">3</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">4</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
          </div>
          <div class="arco-calendar-month-row">
            <div class="arco-calendar-cell">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">5</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">6</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">7</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">8</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">9</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">10</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">11</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`<calendar> demo: > render [panel] correctly 1`] = `
<div class="arco-space arco-space-horizontal arco-space-align-start" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="arco-space-item">
    <div class="arco-calendar arco-calendar-mode-month arco-calendar-panel" style="margin-right: 50px;">
      <div class="arco-calendar-header">
        <div class="arco-calendar-header-left">
          <div class="arco-calendar-header-icon" role="button" tabindex="0"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="currentColor" class="arco-icon arco-icon-double-left" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
              <path d="M36.857 9.9 22.715 24.042l14.142 14.142M25.544 9.9 11.402 24.042l14.142 14.142"></path>
            </svg></div>
          <div class="arco-calendar-header-icon" role="button" tabindex="0"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="currentColor" class="arco-icon arco-icon-left" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
              <path d="M32 8.4 16.444 23.956 32 39.513"></path>
            </svg></div>
          <div class="arco-calendar-header-value">2020 年 04 月</div>
          <div class="arco-calendar-header-icon" role="button" tabindex="0"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="currentColor" class="arco-icon arco-icon-right" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
              <path d="m16 39.513 15.556-15.557L16 8.4"></path>
            </svg></div>
          <div class="arco-calendar-header-icon" role="button" tabindex="0"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="currentColor" class="arco-icon arco-icon-double-right" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
              <path d="m11.143 38.1 14.142-14.142L11.143 9.816M22.456 38.1l14.142-14.142L22.456 9.816"></path>
            </svg></div>
          <!---->
        </div>
        <!---->
      </div>
      <div class="arco-calendar-body">
        <div class="arco-calendar-month">
          <div class="arco-calendar-week-list">
            <div class="arco-calendar-week-list-item">日</div>
            <div class="arco-calendar-week-list-item">一</div>
            <div class="arco-calendar-week-list-item">二</div>
            <div class="arco-calendar-week-list-item">三</div>
            <div class="arco-calendar-week-list-item">四</div>
            <div class="arco-calendar-week-list-item">五</div>
            <div class="arco-calendar-week-list-item">六</div>
          </div>
          <div class="arco-calendar-month-cell-body">
            <div class="arco-calendar-month-row">
              <div class="arco-calendar-cell">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">29</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">30</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">31</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell arco-calendar-cell-in-view arco-calendar-cell-selected">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">1</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell arco-calendar-cell-in-view">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">2</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell arco-calendar-cell-in-view">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">3</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell arco-calendar-cell-in-view">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">4</div>
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-month-row">
              <div class="arco-calendar-cell arco-calendar-cell-in-view">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">5</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell arco-calendar-cell-in-view">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">6</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell arco-calendar-cell-in-view">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">7</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell arco-calendar-cell-in-view">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">8</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell arco-calendar-cell-in-view">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">9</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell arco-calendar-cell-in-view">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">10</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell arco-calendar-cell-in-view">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">11</div>
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-month-row">
              <div class="arco-calendar-cell arco-calendar-cell-in-view">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">12</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell arco-calendar-cell-in-view">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">13</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell arco-calendar-cell-in-view">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">14</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell arco-calendar-cell-in-view">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">15</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell arco-calendar-cell-in-view">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">16</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell arco-calendar-cell-in-view">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">17</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell arco-calendar-cell-in-view">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">18</div>
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-month-row">
              <div class="arco-calendar-cell arco-calendar-cell-in-view">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">19</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell arco-calendar-cell-in-view">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">20</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell arco-calendar-cell-in-view">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">21</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell arco-calendar-cell-in-view">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">22</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell arco-calendar-cell-in-view">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">23</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell arco-calendar-cell-in-view">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">24</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell arco-calendar-cell-in-view">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">25</div>
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-month-row">
              <div class="arco-calendar-cell arco-calendar-cell-in-view">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">26</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell arco-calendar-cell-in-view">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">27</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell arco-calendar-cell-in-view">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">28</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell arco-calendar-cell-in-view">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">29</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell arco-calendar-cell-in-view">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">30</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">1</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">2</div>
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-month-row">
              <div class="arco-calendar-cell">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">3</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">4</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">5</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">6</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">7</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">8</div>
                  <!---->
                </div>
              </div>
              <div class="arco-calendar-cell">
                <div class="arco-calendar-date">
                  <div class="arco-calendar-date-value">9</div>
                  <!---->
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <!---->
      <div class="arco-calendar-footer-btn-wrapper">today</div>
    </div>
  </div>
  <!---->
  <div class="arco-space-item">
    <div class="arco-calendar arco-calendar-mode-year arco-calendar-panel">
      <div class="arco-calendar-header">
        <div class="arco-calendar-header-left">
          <div class="arco-calendar-header-icon" role="button" tabindex="0"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="currentColor" class="arco-icon arco-icon-double-left" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
              <path d="M36.857 9.9 22.715 24.042l14.142 14.142M25.544 9.9 11.402 24.042l14.142 14.142"></path>
            </svg></div>
          <div class="arco-calendar-header-icon arco-calendar-header-icon-hidden" role="button" tabindex="0">
            <!---->
          </div>
          <div class="arco-calendar-header-value">2020 年</div>
          <div class="arco-calendar-header-icon arco-calendar-header-icon-hidden" role="button" tabindex="0">
            <!---->
          </div>
          <div class="arco-calendar-header-icon" role="button" tabindex="0"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="currentColor" class="arco-icon arco-icon-double-right" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
              <path d="m11.143 38.1 14.142-14.142L11.143 9.816M22.456 38.1l14.142-14.142L22.456 9.816"></path>
            </svg></div>
          <!---->
        </div>
        <!---->
      </div>
      <!---->
      <div class="arco-calendar-body">
        <div class="arco-calendar-year">
          <div class="arco-calendar-year-row">
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">一月</div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">二月</div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view arco-calendar-cell-selected">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">三月</div>
              </div>
            </div>
          </div>
          <div class="arco-calendar-year-row">
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">四月</div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">五月</div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">六月</div>
              </div>
            </div>
          </div>
          <div class="arco-calendar-year-row">
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">七月</div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">八月</div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">九月</div>
              </div>
            </div>
          </div>
          <div class="arco-calendar-year-row">
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">十月</div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">十一月</div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">十二月</div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`<calendar> demo: > render [select-header] correctly 1`] = `
<div style="width: 100%; overflow: auto;">
  <div class="arco-calendar arco-calendar-mode-month">
    <div class="arco-calendar-header">
      <div class="arco-calendar-header-left"><span class="arco-select-view-single arco-select arco-calendar-header-value-year arco-select-view arco-select-view-size-small" title="2020"><!----><input class="arco-select-view-input arco-select-view-input-hidden" readonly="" value=""><span class="arco-select-view-value">2020</span><span class="arco-select-view-suffix"><!----><span class="arco-select-view-icon"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="currentColor" class="arco-icon arco-icon-down arco-select-view-arrow-icon" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M39.6 17.443 24.043 33 8.487 17.443"></path></svg></span>
        <!----></span></span>
        <!----><span class="arco-select-view-single arco-select arco-calendar-header-value-month arco-select-view arco-select-view-size-small" title="4"><!----><input class="arco-select-view-input arco-select-view-input-hidden" readonly="" value=""><span class="arco-select-view-value">4</span><span class="arco-select-view-suffix"><!----><span class="arco-select-view-icon"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="currentColor" class="arco-icon arco-icon-down arco-select-view-arrow-icon" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M39.6 17.443 24.043 33 8.487 17.443"></path></svg></span>
        <!----></span></span>
        <!----><button class="arco-btn arco-btn-secondary arco-btn-shape-square arco-btn-size-small arco-btn-status-normal" type="button">
          <!--v-if-->今天
        </button>
      </div>
      <div class="arco-calendar-header-right"><span class="arco-radio-group-button arco-radio-group-size-small arco-radio-group-direction-horizontal"><label class="arco-radio-button arco-radio-checked"><input type="radio" checked="" class="arco-radio-target" value="month"><span class="arco-radio-button-content">月</span></label><label class="arco-radio-button"><input type="radio" class="arco-radio-target" value="year"><span class="arco-radio-button-content">年</span></label></span></div>
    </div>
    <div class="arco-calendar-body">
      <div class="arco-calendar-month">
        <div class="arco-calendar-week-list">
          <div class="arco-calendar-week-list-item">周日</div>
          <div class="arco-calendar-week-list-item">周一</div>
          <div class="arco-calendar-week-list-item">周二</div>
          <div class="arco-calendar-week-list-item">周三</div>
          <div class="arco-calendar-week-list-item">周四</div>
          <div class="arco-calendar-week-list-item">周五</div>
          <div class="arco-calendar-week-list-item">周六</div>
        </div>
        <div class="arco-calendar-month-cell-body">
          <div class="arco-calendar-month-row">
            <div class="arco-calendar-cell">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">29</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">30</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">31</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view arco-calendar-cell-selected">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">1</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">2</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">3</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">4</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
          </div>
          <div class="arco-calendar-month-row">
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">5</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">6</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">7</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">8</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">9</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">10</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">11</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
          </div>
          <div class="arco-calendar-month-row">
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">12</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">13</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">14</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">15</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">16</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">17</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">18</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
          </div>
          <div class="arco-calendar-month-row">
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">19</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">20</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">21</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">22</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">23</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">24</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">25</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
          </div>
          <div class="arco-calendar-month-row">
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">26</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">27</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">28</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">29</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell arco-calendar-cell-in-view">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">30</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">1</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">2</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
          </div>
          <div class="arco-calendar-month-row">
            <div class="arco-calendar-cell">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">3</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">4</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">5</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">6</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">7</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">8</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
            <div class="arco-calendar-cell">
              <div class="arco-calendar-date">
                <div class="arco-calendar-date-value">
                  <div class="arco-calendar-date-circle">9</div>
                </div>
                <div class="arco-calendar-date-content">
                  <!---->
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <!---->
    <!---->
  </div>
</div>
`;
